--- a/Projetos/01_site_grupo/Pages/Devs.html
+++ b/Projetos/01_site_grupo/Pages/Devs.html
@@ -8,6 +8,10 @@
     <!-- carregamento do bootstrap -->
     
     <link rel="stylesheet" type="text/css" href = "Stylesheet.css">
+
+    <div class="d-flex justify-content-center">
+        <a href="Index.html" type="button" color="white" class="btn btn-outline-danger w-100">Voltar </a>            
+    </div>
     
     <title>Time</title>
 </head>
