--- a/Exercícios/05_game_forca/Index.html
+++ b/Exercícios/05_game_forca/Index.html
@@ -3,14 +3,70 @@
 
     <head>
         <meta charset= "UTF-8" name= "viewport" content = "width=device-width, sacle=1">
-
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
         <link rel="stylesheet" type="text/css" href = "Style.css">
 
         <script type="text/javascript" src= "gameCode.js"></script>
+        <title>Jogo da Forca</title>
 
     </head>
 
     <body>
+
+        <div class="container" style="background-color: goldenrod;">
+            <div class="row">
+                <div class="col">
+                    <p>JOGO DA FORCA</p>
+                </div>
+    
+            </div>
+            <div class="row" style="background-color: yellow;">
+
+              <div class="col-lg" style="background-color: #102303;">
+                <img class="img-fluid" id="enforcado" src="FundoForca.png">
+
+              </div>
+
+              <div class="col-lg text-center">
+
+                <div class="btn-group-vertical">
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('a')">A</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('b')">B</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('c')">C</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('d')">D</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('e')">E</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('f')">F</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('g')">G</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('h')">H</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('i')">I</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('j')">J</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('k')">K</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('l')">L</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('m')">M</button>
+                </div>
+
+                <div class="btn-group-vertical">   
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('n')">N</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('o')">O</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('p')">P</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('q')">Q</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('r')">R</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('s')">S</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('t')">T</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('u')">U</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('v')">V</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('w')">W</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('x')">X</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('y')">Y</button>
+                    <button type="button" class="btn btn-success btn-lg" onclick= "guessLetter('z')">Z</button>
+                </div>
+
+            </div>
+
+            </div>
+          </div>
+
+    </body>
+
+    </html>
