--- a/Projetos/FlirtyTendencies/MainMenu.html
+++ b/Projetos/FlirtyTendencies/MainMenu.html
@@ -12,42 +12,42 @@
 
       <!-- LINHA DOS COLETIVISTAS -->
     <div class="row">
-        <div class="column" style="background-color:#aaa;">
-        <button class="button"><span>Helenna </span></button>
+        <div class="column" style="background-color:#006B0B;">
+        <button onclick="window.location.href='HelennaPage.html'" class="button" style="background-color: green;"><span>Helenna</span></button>
           <h4>Ordeira e Coletivista<h4>
           <p>Tímida, séria e dedicada, essa guerreira élfica pode e vai ser sua paixão dos sonhos!</p>
         </div>
 
-        <div class="column" style="background-color:#aaa;">
-            <button class="button"><span>Guilhermo </span></button>
+        <div class="column" style="background-color: #006B0B;">
+            <button onclick="window.location.href='PogglierPage.html'" class="button" style="background-color: green;"><span>Pogglier</span></button>
           <h4>Neutro e Coletivista<h4>
           <p>Divertido, gentil e um mediador nato, o pacote completo para qualquer um que ame elementais! </p>
         </div>
 
-        <div class="column" style="background-color:#aaa;">
-         <button class="button"><span>Arosh </span></button>
+        <div class="column" style="background-color:#006B0B;">
+         <button onclick="window.location.href='AroshPage.html'" class="button" style="background-color: green;"><span>Arosh </span></button>
             <h4>Caótico e Coletivista<h4>
             <p>Risonha, rebelde e ousada, como não se apaixonar por essa eternamente jovem e vívida alma romântica?</p>
           </div>
       </div>
 
        <!-- LINHA DOS NEUTROS -->
-      <div class="column" style="background-color:#bbb;">
-        <button class="button"><span>Mari Macho </span></button>
+      <div class="column" style="background-color:#414543">
+        <button onclick="window.location.href='RyuktoPage.html'" class="button" style="background-color: gray;"><span>Ryuk'to</span></button>
         <h4>Ordeiro e Neutro<h4>
         <p>Justo, fiel e engraçado, tudo o que você poderia desejar pra você em uma cobertura escamosa!</p>
       </div>
    
       
-      <div class="column" style="background-color:#bbb;">
-        <button class="button"><span>Fulane </span></button>
+      <div class="column" style="background-color:#414543">
+        <button onclick="window.location.href='NittinPage.html'" class="button" style="background-color: gray;"><span>Nittin </span></button>
         <h4>Neutro Verdadeiro<h4>
         <p>Calme, colete e harmoniose, nada melhor do que um romance baunilha bem forte, não é mesmo?</p>
       </div>
      
 
-      <div class="column" style="background-color:#bbb;">
-        <button class="button"><span>Purple Mane </span></button>
+      <div class="column" style="background-color: #414543;">
+        <button onclick="window.location.href='PurpleManePage.html'" class="button" style="background-color: gray;"><span>Purple Mane</span></button>
             <h4>Caótico e Neutro<h4>
             <p>Inquisitivo, ácido e fora dos trilhos, caso você esteja afim de cometer uma loucura de amor!</p>
       </div>
@@ -57,21 +57,21 @@
      <!-- LINHA DOS INDIVIDUALISTAS -->
       <div class="row">
 
-        <div class="column" style="background-color:#ccc;">
-            <button class="button"><span>Orczão</span></button>
+        <div class="column" style="background-color: #B30600;">
+            <button onclick="window.location.href='CrusherPage.html'" class="button" style="background-color: red;"><span>Crusher</span></button>
             <h4>Ordeiro e Individualista<h4>
             <p>Forte, resiliente e dominador, não julgue pela armadura, esse general também pode amar!</p>
         </div>
 
-        <div class="column" style="background-color:#ccc;">
-            <button class="button"><span>Capitalista</span></button>
+        <div class="column" style="background-color: #B30600;">
+            <button onclick= "window.location.href=''" class="button" style="background-color: red;"><span>Tennuka</span></button>
             <h4>Neutro e Individualista<h4>
             <p>Ambicioso, persuasivo e narcisista, uma experiência única por um preço duvidoso... </p>
         </div>
 
 
-        <div class="column" style="background-color:#ccc;">
-            <button class="button"><span>Elnarhis</span></button>
+        <div class="column" style="background-color: #B30600;">
+            <button onclick="window.location.href='ElnarhisPage.html'" class="button" style="background-color: red;"><span>Elnarhis</span></button>
             <h4>Caótico e Individualista<h4>
             <p>Intensa, determinada e teimosa, ainda há luz dentro dela, e a chama da paixão lhe aguarda!</p>
         </div>
