Upando código do note do joão...

--- a/Projetos/01_site_grupo/Pages/Index.html
+++ b/Projetos/01_site_grupo/Pages/Index.html
@@ -35,10 +35,14 @@
       <div class="d-flex justify-content-center">
         <a class="btn btn-outline-danger btn-lg btn-block" href="OutrosProjetos.html" role="button">Outros Jogos</a>
       </div>
+
+      <div class="d-flex justify-content-center">
+        <a class="btn btn-outline-danger btn-lg btn-block" href="../FlirtyTendencies/Pages/Game.html" role="button">Jogar Flirty Tendencies</a>
+      </div>
      
             <!-- VideoPlayer -->
                 <div class="embed-responsive embed-responsive-21by9">
-                 <iframe class="embed-responsive-item" src="C:\Users\Renata\Desktop\Web\Projetos\01_site_grupo\Media\Video.mp4"></iframe>
+                 <iframe class="embed-responsive-item" src="../Media/Video.mp4"></iframe>
                 </div>
     </Body>
 
